--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Assets/Playable Characters/Zhenli Huáng RPG Moves Playable Characters (Inspired by Earthbound's Ness and Lucas)/Minor Strength Signature Move/Air - Crane Attacks 5/Minor Strength  Air - Crane Attacks 5\! frame0010.png.meta
